--- a/viz/rep1.ipynb
+++ b/viz/rep1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
        "9   Pauillac (Premier Grand Cru Classé)              4.6          73615"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,10 +141,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>ratings_average</th>\n",
+       "      <th>ratings_count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Cabernet Sauvignon</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>157944</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Brut Champagne</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>146377</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Sassicaia</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>107646</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Opus One</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>77053</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Pauillac (Premier Grand Cru Classé)</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>73615</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Unico</td>\n",
+       "      <td>4.7</td>\n",
+       "      <td>45140</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Sauternes</td>\n",
+       "      <td>4.7</td>\n",
+       "      <td>44126</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Special Selection Cabernet Sauvignon</td>\n",
+       "      <td>4.7</td>\n",
+       "      <td>41236</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Pomerol</td>\n",
+       "      <td>4.7</td>\n",
+       "      <td>32157</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Grange</td>\n",
+       "      <td>4.7</td>\n",
+       "      <td>24356</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                   name  ratings_average  ratings_count\n",
+       "5                    Cabernet Sauvignon              4.6         157944\n",
+       "6                        Brut Champagne              4.6         146377\n",
+       "7                             Sassicaia              4.6         107646\n",
+       "8                              Opus One              4.6          77053\n",
+       "9   Pauillac (Premier Grand Cru Classé)              4.6          73615\n",
+       "0                                 Unico              4.7          45140\n",
+       "1                             Sauternes              4.7          44126\n",
+       "2  Special Selection Cabernet Sauvignon              4.7          41236\n",
+       "3                               Pomerol              4.7          32157\n",
+       "4                                Grange              4.7          24356"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.sort_values('ratings_count',ascending=False,inplace=True)\n",
+    "df"
+   ]
   },
   {
    "cell_type": "code",
@@ -166,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -178,20 +291,20 @@
        "data": [
         {
          "alignmentgroup": "True",
-         "hovertemplate": "name=%{x}<br>ratings_average=%{y}<br>ratings_count=%{marker.color}<extra></extra>",
+         "hovertemplate": "name=%{x}<br>ratings_count=%{text}<br>ratings_average=%{marker.color}<extra></extra>",
          "legendgroup": "",
          "marker": {
           "color": [
-           45140,
-           44126,
-           41236,
-           32157,
-           24356,
-           157944,
-           146377,
-           107646,
-           77053,
-           73615
+           4.6,
+           4.6,
+           4.6,
+           4.6,
+           4.6,
+           4.7,
+           4.7,
+           4.7,
+           4.7,
+           4.7
           ],
           "coloraxis": "coloraxis",
           "pattern": {
@@ -202,32 +315,44 @@
          "offsetgroup": "",
          "orientation": "v",
          "showlegend": false,
+         "text": [
+          157944,
+          146377,
+          107646,
+          77053,
+          73615,
+          45140,
+          44126,
+          41236,
+          32157,
+          24356
+         ],
          "textposition": "auto",
          "type": "bar",
          "x": [
-          "Unico",
-          "Sauternes",
-          "Special Selection Cabernet Sauvignon",
-          "Pomerol",
-          "Grange",
           "Cabernet Sauvignon",
           "Brut Champagne",
           "Sassicaia",
           "Opus One",
-          "Pauillac (Premier Grand Cru Classé)"
+          "Pauillac (Premier Grand Cru Classé)",
+          "Unico",
+          "Sauternes",
+          "Special Selection Cabernet Sauvignon",
+          "Pomerol",
+          "Grange"
          ],
          "xaxis": "x",
          "y": [
-          4.7,
-          4.7,
-          4.7,
-          4.7,
-          4.7,
-          4.6,
-          4.6,
-          4.6,
-          4.6,
-          4.6
+          157944,
+          146377,
+          107646,
+          77053,
+          73615,
+          45140,
+          44126,
+          41236,
+          32157,
+          24356
          ],
          "yaxis": "y"
         }
@@ -237,7 +362,7 @@
         "coloraxis": {
          "colorbar": {
           "title": {
-           "text": "ratings_count"
+           "text": "ratings_average"
           }
          },
          "colorscale": [
@@ -285,9 +410,6 @@
         },
         "legend": {
          "tracegroupgap": 0
-        },
-        "margin": {
-         "t": 60
         },
         "template": {
          "data": {
@@ -1105,14 +1227,20 @@
           }
          }
         },
+        "title": {
+         "text": "Top 10 wines with ratings_count and ratings_average"
+        },
         "xaxis": {
          "anchor": "y",
          "domain": [
           0,
           1
          ],
+         "tickfont": {
+          "size": 10
+         },
          "title": {
-          "text": "name"
+          "text": ""
          }
         },
         "yaxis": {
@@ -1122,11 +1250,14 @@
           1
          ],
          "range": [
-          4,
-          5
+          10000,
+          160000
          ],
+         "tickfont": {
+          "size": 10
+         },
          "title": {
-          "text": "ratings_average"
+          "text": ""
          }
         }
        }
@@ -1139,10 +1270,16 @@
    "source": [
     "fig = px.bar(df, \n",
     "             x='name', \n",
-    "             y='ratings_average', \n",
-    "            #  title='Average Ratings of wines', \n",
-    "             color='ratings_count',\n",
-    "             range_y=[4, 5])  # Set y-axis range from 4 to 5\n",
+    "             y='ratings_count', \n",
+    "             title='Top 10 wines with ratings_count and ratings_average', \n",
+    "             color='ratings_average',\n",
+    "             range_y=[10000, 160000],\n",
+    "             text=df['ratings_count'],\n",
+    "            \n",
+    "             \n",
+    "            ) \n",
+    "fig.update_xaxes(tickfont=dict(size=10),title_text='')\n",
+    "fig.update_yaxes(tickfont=dict(size=10),title_text='')\n",
     "\n",
     "fig.show()"
    ]
